logs/products.plonebooking.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/PloneBooking'...
Compiling './lib/python3.5/site-packages/Products/PloneBooking/BookingTool.py'...
***   File "./lib/python3.5/site-packages/Products/PloneBooking/BookingTool.py", line 346
    raise ValueError, "You can just escape strings: %s" % str(text)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/PloneBooking/Extensions'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/browser'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/browser/templates'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/content'...
Compiling './lib/python3.5/site-packages/Products/PloneBooking/content/BookingCenter.py'...
***   File "./lib/python3.5/site-packages/Products/PloneBooking/content/BookingCenter.py", line 404
    raise ValueError, "Interval must be a multiple or a divider of 60"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/PloneBooking/doc'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/i18n'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/profiles'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/profiles/default'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/profiles/default/skins'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/profiles/default/workflows'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/profiles/default/workflows/bookable_object_workflow'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/profiles/default/workflows/booking_workflow'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/profiles/default/workflows/booking_workflow/scripts'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/skins'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_images'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_javascripts'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_scripts'...
Compiling './lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_scripts/booking_periodicity_create.py'...
***   File "./lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_scripts/booking_periodicity_create.py", line 22
    return '<div class="portalMessage">The periodicity end date is not valid</div>'
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_scripts/getPeriodicityResult.py'...
***   File "./lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_scripts/getPeriodicityResult.py", line 34
    return html_message
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_scripts/plonebooking_add.py'...
***   File "./lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_scripts/plonebooking_add.py", line 63
    return response.redirect(redirect_url)
                                         ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_styles'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/skins/plonebooking_templates'...
Listing './lib/python3.5/site-packages/Products/PloneBooking/tests'...
Compiling './lib/python3.5/site-packages/Products/PloneBooking/tests/Log.py'...
***   File "./lib/python3.5/site-packages/Products/PloneBooking/tests/Log.py", line 65
    raise ValueError, "Invalid log level :", level
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/PloneBooking/tests/common.py'...
***   File "./lib/python3.5/site-packages/Products/PloneBooking/tests/common.py", line 32
    True  = 1
    ^
SyntaxError: can't assign to keyword

Compiling './lib/python3.5/site-packages/Products/PloneBooking/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/PloneBooking/tests/framework.py", line 87
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products.PloneBooking-2.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
